# data-invest

./: README.md  main.py  pyproject.toml  requirements.txt
app/database/: db.py  repository.py
app/stock_market/: stock_market_controller.py  stock_market_model.py
